test/error/ast/IsEqualProc.mod
MODULE IsEqualProc;
PROCEDURE P; END P;
VAR t: BOOLEAN;
BEGIN
  t := P = P;
END IsEqualProc.
